--- a/keras.ipynb
+++ b/keras.ipynb
@@ -304,36 +304,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0669883b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# building the model\n",
     "model = Sequential([\n",
-    "    Dense(30, activation = 'relu', input_shape=(X_train.shape[1],)),\n",
-    "    Dense(15, activation = 'relu'),\n",
+    "    Dense(30, activation = 'relu', input_shape=(X_train.shape[1], )), # Input layer with number of features\n",
+    "    Dense(15, activation = 'relu'), # Neurons in hidden layer\n",
+    "    Dense(1, activation = 'sigmoid') # Output layer for binary classification\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a3fe3744",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compile the model\n"
+    "# compile the model\n",
+    "model.compile(\n",
+    "    optimizer = Adam(learning_rate = 0.001),\n",
+    "    loss = 'binary_crossentropy',\n",
+    "    metrics = ['accuracy']\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3b0e76c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15\n",
+      "12/12 [==============================] - 1s 85ms/step - loss: 0.3330 - accuracy: 0.9066 - val_loss: 0.2761 - val_accuracy: 0.8901\n",
+      "Epoch 2/15\n",
+      "12/12 [==============================] - 0s 10ms/step - loss: 0.2532 - accuracy: 0.9368 - val_loss: 0.2276 - val_accuracy: 0.9121\n",
+      "Epoch 3/15\n",
+      "12/12 [==============================] - 0s 7ms/step - loss: 0.2023 - accuracy: 0.9478 - val_loss: 0.1931 - val_accuracy: 0.9231\n",
+      "Epoch 4/15\n",
+      "12/12 [==============================] - 0s 9ms/step - loss: 0.1676 - accuracy: 0.9588 - val_loss: 0.1667 - val_accuracy: 0.9341\n",
+      "Epoch 5/15\n",
+      "12/12 [==============================] - 0s 10ms/step - loss: 0.1405 - accuracy: 0.9615 - val_loss: 0.1467 - val_accuracy: 0.9341\n",
+      "Epoch 6/15\n",
+      "12/12 [==============================] - 0s 6ms/step - loss: 0.1210 - accuracy: 0.9643 - val_loss: 0.1281 - val_accuracy: 0.9231\n",
+      "Epoch 7/15\n",
+      "12/12 [==============================] - 0s 7ms/step - loss: 0.1051 - accuracy: 0.9808 - val_loss: 0.1142 - val_accuracy: 0.9560\n",
+      "Epoch 8/15\n",
+      "12/12 [==============================] - 0s 13ms/step - loss: 0.0920 - accuracy: 0.9835 - val_loss: 0.1032 - val_accuracy: 0.9560\n",
+      "Epoch 9/15\n",
+      "12/12 [==============================] - 0s 12ms/step - loss: 0.0821 - accuracy: 0.9863 - val_loss: 0.0952 - val_accuracy: 0.9670\n",
+      "Epoch 10/15\n",
+      "12/12 [==============================] - 0s 8ms/step - loss: 0.0735 - accuracy: 0.9863 - val_loss: 0.0888 - val_accuracy: 0.9670\n",
+      "Epoch 11/15\n",
+      "12/12 [==============================] - 0s 7ms/step - loss: 0.0673 - accuracy: 0.9863 - val_loss: 0.0828 - val_accuracy: 0.9780\n",
+      "Epoch 12/15\n",
+      "12/12 [==============================] - 0s 19ms/step - loss: 0.0616 - accuracy: 0.9890 - val_loss: 0.0814 - val_accuracy: 0.9780\n",
+      "Epoch 13/15\n",
+      "12/12 [==============================] - 0s 9ms/step - loss: 0.0575 - accuracy: 0.9890 - val_loss: 0.0800 - val_accuracy: 0.9780\n",
+      "Epoch 14/15\n",
+      "12/12 [==============================] - 0s 7ms/step - loss: 0.0539 - accuracy: 0.9890 - val_loss: 0.0764 - val_accuracy: 0.9670\n",
+      "Epoch 15/15\n",
+      "12/12 [==============================] - 0s 6ms/step - loss: 0.0506 - accuracy: 0.9918 - val_loss: 0.0748 - val_accuracy: 0.9670\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x180fb7c83a0>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# fit the model "
+    "# fit the model \n",
+    "model.fit(\n",
+    "    X_train, y_train, epochs = 15, batch_size = 32,\n",
+    "    validation_split = 0.2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "532f0fb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4/4 [==============================] - 0s 5ms/step - loss: 0.1448 - accuracy: 0.9561\n",
+      "test accuracy:  0.9561\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate\n",
+    "loss, accuracy = model.evaluate(X_test, y_test)\n",
+    "print(f'test accuracy:  {accuracy:.4f}')"
    ]
   },
   {
@@ -373,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "cd06eb8e",
    "metadata": {},
    "outputs": [],
@@ -393,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "df2a1204",
    "metadata": {},
    "outputs": [],
@@ -439,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "16f54f72",
    "metadata": {},
    "outputs": [],
